Added controller and route for GET / Docker
docker-compose.yaml / Dockerfile
swagger-config.yaml
/get route
/get controller

Not TESTED!!
