# src/docs/swagger-config.yaml
@@ -3,59 +3,243 @@ info:
   title: Godel Petstore
   description: SDET MASTERY SANDBOX
   version: 1.0.0
+  contact:
+    email: mikita.zdanovich@godeltech.com
 servers:
   - url: 'http://localhost:3000'
+  - url: 'https://petstore.godel'
 paths:
-  /pets:
-    get:
-      summary: List all pets
-      operationId: listPets
+  /pet:
+    put:
       tags:
-        - pets
-      parameters:
-        - name: limit
-          in: query
-          description: How many items to return at one time (max 100)
-          required: false
-          schema:
-            type: integer
-            format: int32
+        - pet
+      summary: Update an existing pet
+      operationId: updatePet
+      requestBody:
+        description: Pet object to be added to the Petstore
+        content:
+          aplication/json:
+            schema:
+              $ref: '#components/schemas/Pet'
+          application/xml:
+              schema:
+                $ref: '#/components/schemas/Pet'
+        required: true
       responses:
-        '200':
-          description: A paged array of pets
-          headers:
-            x-next:
-              description: A link to the next page of responses
-              schema:
-                type: string
+        400:
+          description: Invalid ID supplied
           content:
-            application/json:
-              schema:
-                $ref: "#components/schemas/Pets"
-        default:
-          description: unexpected error
+            {}
+        404:
+          description: Pet not found
           content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Error"
+            {}
+        405:
+          description: Failed Validation
+          content:
+            {}
+      security:
+      - petstore_auth:
+          - write:pets
+          - read:pets
     post:
-      summary: Create a pet
-      operationId: createPets
       tags:
-        - pets
-      responses:
-        '201':
-          description: Null response
-        default:
-          description: unexpected error
+        - pet
+      summary: Add a new pet to the store
+      operationId: addPet
+      requestBody:
+          description: Pet object that needs to be added to the store
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/Error"
+                $ref: '#/components/schemas/Pet'
+            application/xml:
+              schema:
+                $ref: '#/components/schemas/Pet'
+          required: true
+      responses:
+          405:
+            description: Invalid input
+            content: { }
+      security:
+          - petstore_auth:
+              - write:pets
+              - read:pets
+  /pet/findByStatus:
+    get:
+      tags:
+        - pet
+      summary: Find Pets by Status
+      description: Multiple status values can be provided with comma searated strings
+      operationId: findPetsByStatus
+      parameters:
+        - name: status
+          in: query
+          description: Status values that need to be considered for filter
+          required: true
+          style: form
+          explode: true
+          schema:
+            type: array
+            items:
+              type: string
+              default: available
+              enum:
+                - available
+                - pending
+                - sold
+      responses:
+        200:
+            description: Operation Succeed
+            content:
+              application/xml:
+                schema:
+                  type: array
+                  items:
+                    $ref: '#/components/schemas/Pet'
+              application/json:
+                schema:
+                  type: array
+                  items:
+                    $ref: '#/components/schemas/Pet'
+        400:
+            description: Invalid status value
+            content: { }
+      security:
+        - petstore_auth:
+              - write:pets
+              - read:pets
 
 components:
-    schemas:
-      Pets:
-        type: object
-      Error:
-        type: object
+  schemas:
+    Order:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+        petId:
+          type: integer
+          format: int64
+        quantity:
+          type: integer
+          format: int32
+        shipDate:
+          type: string
+          format: date-time
+        status:
+          type: string
+          description: Order Status
+          enum:
+            - placed
+            - approved
+            - delivered
+        complete:
+          type: boolean
+          default: false
+      xml:
+        name: Order
+    Category:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+        name:
+          type: string
+      xml:
+        name: Category
+    User:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+        username:
+          type: string
+        firstName:
+          type: string
+        lastName:
+          type: string
+        email:
+          type: string
+        password:
+          type: string
+        phone:
+          type: string
+        userStatus:
+          type: integer
+          description: User Status
+          format: int32
+      xml:
+        name: User
+    Tag:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+        name:
+          type: string
+      xml:
+        name: Tag
+    Pet:
+      required:
+        - name
+        - photoUrls
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+        category:
+          $ref: '#/components/schemas/Category'
+        name:
+          type: string
+          example: doggie
+        photoUrls:
+          type: array
+          xml:
+            name: photoUrl
+            wrapped: true
+          items:
+            type: string
+        tags:
+          type: array
+          xml:
+            name: tag
+            wrapped: true
+          items:
+            $ref: '#/components/schemas/Tag'
+        status:
+          type: string
+          description: pet status in the store
+          enum:
+            - available
+            - pending
+            - sold
+      xml:
+        name: Pet
+    ApiResponse:
+      type: object
+      properties:
+        code:
+          type: integer
+          format: int32
+        type:
+          type: string
+        message:
+          type: string
+  securitySchemes:
+      petstore_auth:
+        type: oauth2
+        flows:
+          implicit:
+            authorizationUrl: localhost:300/auth
+            scopes:
+              write:pets: modify pets in your account
+              read:pets: read your pets
+      api_key:
+        type: apiKey
+        name: api_key
+        in: header
